--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "free_cooworking",
   "version": "1.0.0",
   "description": "A service that allows you to share free spaces of your cooworking with other people",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/rackdon/freeCooworking/issues"
   },
-  "homepage": "https://github.com/rackdon/freeCooworking#readme"
+  "homepage": "https://github.com/rackdon/freeCooworking#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "glob": "^7.0.5",
+    "log4js": "^0.6.38",
+    "mongoose": "^4.5.5"
+  }
 }
