--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "glob": "^7.0.5",
+    "lodash": "^4.13.1",
     "log4js": "^0.6.38",
     "mongoose": "^4.5.5"
   }
