--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rackdon/freeCooworking#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "glob": "^7.0.5",
     "lodash": "^4.13.1",
     "log4js": "^0.6.38",
